<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:autofit="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ProgressBar
        android:id="@+id/loading_progress"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:visibility="gone"
        android:layout_gravity="center"/>

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="370dp"
                android:orientation="vertical"
                app:layout_collapseMode="parallax">
                <ImageView
                    android:id="@+id/movie_backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="370dp"
                    android:contentDescription="@string/tv_show_backdrop"
                    android:scaleType="centerCrop"
                    android:layout_alignParentTop="true"/>

                <View
                    android:id="@+id/movie_background"
                    android:layout_width="match_parent"
                    android:layout_height="125dp"
                    android:layout_alignParentBottom="true"
                    android:alpha="0.8"
                    android:background="@color/colorPrimaryDark"/>

                <ImageView
                    android:id="@+id/movie_poster"
                    android:layout_width="110dp"
                    android:layout_height="150dp"
                    android:layout_marginLeft="@dimen/content_margin_left"
                    android:contentDescription="@string/tv_show_poster"
                    android:scaleType="centerCrop"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="200dp"/>

                <TextView
                    android:id="@+id/movie_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/show_title"
                    android:layout_toRightOf="@+id/movie_poster"
                    android:layout_marginLeft="@dimen/content_margin_left"
                    android:layout_marginRight="@dimen/content_margin_left"
                    android:layout_below="@+id/movie_release_date"
                    android:textAppearance="@style/TextAppearance.AppCompat.Title"
                    android:fontFamily="sans-serif"
                    android:maxLines="2"
                    android:autoSizeMinTextSize="14sp"/>

                <TextView
                    android:id="@+id/movie_release_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/release_date"
                    android:layout_toRightOf="@+id/movie_poster"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="253dp"
                    android:layout_marginLeft="@dimen/content_margin_left"
                    android:layout_marginRight="@dimen/content_margin_left"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:fontFamily="sans-serif-light"
                    android:maxLines="2"
                    android:autoSizeMinTextSize="10sp"/>

                <LinearLayout
                    android:id="@+id/movie_rating_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@id/movie_title"
                    android:layout_toRightOf="@id/movie_poster"
                    android:layout_marginLeft="@dimen/content_margin_left"
                    android:layout_marginRight="@dimen/content_margin_left"
                    android:layout_marginTop="@dimen/grid_item_margin"
                    android:layout_alignParentRight="true">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_star"/>

                    <TextView
                        android:id="@+id/movie_rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rating"
                        android:layout_gravity="center"
                        android:fontFamily="sans-serif-light"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:layout_marginLeft="@dimen/content_margin_top"/>

                    <TextView
                        android:id="@+id/movie_vote_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vote_count"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/content_margin_top"
                        android:fontFamily="sans-serif-light"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
                </LinearLayout>
            </RelativeLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrolling_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/movie_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/content_margin_left"
                android:text="@string/summary"
                android:fontFamily="sans-serif"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@android:color/primary_text_light"/>

            <TextView
                android:id="@+id/movie_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/content_margin_left"
                android:layout_marginTop="@dimen/content_margin_top"
                android:fontFamily="sans-serif-light"
                android:lineSpacingMultiplier="1.2"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/primary_text_light"/>

            <include
                layout="@layout/trailers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/content_margin_left"
                android:layout_marginTop="@dimen/content_margin_top"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>